jilles      2007/02/13 14:52:23 UTC	(20070213-7647)
  Log:
  Add in /cs set verbose help file:
  Fantasy commands are always executed as if SET VERBOSE ON is in effect.
  

  Changes:	Modified:
  +3 -0		trunk/help/cservice/set_verbose (File Modified) 


jilles      2007/02/12 16:31:48 UTC	(20070212-7645)
  Log:
  Add my hybserv to atheme conversion tool to contrib.
  

  Changes:	Modified:
  +309 -0	trunk/contrib/hybservtoatheme.pl (File Added) 


jilles      2007/02/11 16:35:50 UTC	(20070211-7643)
  Log:
  charybdis/ratbox/hybrid: hide jupes from a flattened /links
  

  Changes:	Modified:
  +1 -1		trunk/modules/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/modules/protocol/hybrid.c (File Modified) 
  +1 -1		trunk/modules/protocol/ratbox.c (File Modified) 


jilles      2007/02/11 15:19:54 UTC	(20070211-7641)
  Log:
  chanserv why: also show founder access
  

  Changes:	Modified:
  +6 -0		trunk/modules/chanserv/why.c (File Modified) 


jilles      2007/02/11 14:22:07 UTC	(20070211-7639)
  Log:
  nickserv info: show to everyone if the account has not
  completed registration verification (MU_WAITAUTH).
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/info.c (File Modified) 


jilles      2007/02/10 22:56:06 UTC	(20070210-7637)
  Log:
  akill add:
  - ignore an oper trying to akill add <nick> himself
  - collapse akill masks (** to * etc)
  - refuse some akill masks that may disconnect servers on some ircds
  

  Changes:	Modified:
  +22 -3	trunk/modules/operserv/akill.c (File Modified) 


jilles      2007/02/10 21:45:17 UTC	(20070210-7635)
  Log:
  akill add: remove some code duplication
  

  Changes:	Modified:
  +20 -23	trunk/modules/operserv/akill.c (File Modified) 


jilles      2007/02/10 21:01:44 UTC	(20070210-7633)
  Log:
  Rerun autoconf.
  

  Changes:	Modified:
  +3 -11	trunk/configure (File Modified) 


jilles      2007/02/10 21:01:21 UTC	(20070210-7631)
  Log:
  - Remove libatheme include path